--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -2,6 +2,7 @@ header {
   position: relative;
   max-height: 100vh;
   overflow: hidden;
+  text-align: center;
 
   h1 {
     font-size: 3em;
@@ -31,15 +32,9 @@ header {
     z-index: 10;
     color: $white;
     margin-bottom: 3em;
-  }
-
-  .block {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-    color: #fff;
+    text-align: left;
+    display: block;
+    width: 100%;
   }
 
   .embed {
